Update with EasyMode

--- a/LearningToListen/app/src/main/AndroidManifest.xml
+++ b/LearningToListen/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -20,6 +21,9 @@
         <activity
             android:name=".SettingsActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".MediumModeActivity" />
+        <activity android:name=".EasyModeActivity" />
+        <activity android:name=".HardModeActivity"></activity>
     </application>
 
 </manifest>
