update with graph and emails

--- a/LearningToListen/app/src/main/AndroidManifest.xml
+++ b/LearningToListen/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
             android:screenOrientation="portrait" />
         <activity android:name=".MediumModeActivity" />
         <activity android:name=".EasyModeActivity" />
-        <activity android:name=".HardModeActivity"></activity>
+        <activity android:name=".HardModeActivity" />
+        <activity android:name=".GraphResultActivity"></activity>
     </application>
 
 </manifest>
